cabal-version:       2.0
name:                reflex-gl-demo
version:             0.1.0.0
synopsis:            Wire Reflex and OpenGL together
license:             BSD3
license-file:        LICENCE
author:              Jack Kelly
maintainer:          jack.kelly@data61.csiro.au
copyright:           Copyright (c) 2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     App
                     , BufferObject
                     , Camera
                     , Data.Clamped
                     , Data.Wraparound
                     , Reflex.FSNotify
                     , Shader
                     , Uniform
                     , VertexArray
  ghc-options:         -Wall
  build-depends:       base ^>= 4.12
                     , GLFW-b ^>= 3.2.1
                     , StateVar ^>= 1.1.1.1
                     , bytestring ^>= 0.10.8.2
                     , containers ^>= 0.6.0.1
                     , dependent-map ^>= 0.2.4
                     , dependent-sum ^>= 0.4
                     , dependent-sum-template ^>= 0.0.0.6
                     , directory ^>= 1.3.3.0
                     , fsnotify ^>= 0.3.0.1
                     , gl ^>= 0.8
                     , glow ^>= 0
                     , lens ^>= 4.17.1
                     , linear ^>= 1.20.9
                     , mtl ^>= 2.2.2
                     , path ^>= 0.6.1
                     , ref-tf ^>= 0.4.0.1
                     , reflex == 0.6.1
                     , reflex-basic-host ^>= 0.2
                     , these ^>= 0.7.6
                     , time ^>= 1.8.0.2
                     , witherable == 0.3.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable reflex-gl-demo
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:       base ^>= 4.12
                     , reflex-gl-demo
  hs-source-dirs:      bin
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:       base ^>= 4.12
                     , QuickCheck ^>= 2.12.6.1
                     , reflex-gl-demo
                     , doctest ^>= 0.16.0.1
  hs-source-dirs:      doctest
  default-language:    Haskell2010
